# HomeWatcher

./: .gitignore  Qt configure build  README.md
HW_app/: HW_app.pro
Raspberry_app/: CMakeLists.txt  Network.cpp  Network.h  Raspberry_app.pro  SharedQueue.h  main.cpp  mainwindow.cpp  mainwindow.h
Raspberry_app/Camera/: Camera.cpp  Camera.h
Raspberry_app/UDP_Server/: UDP_Server.cpp  UDP_Server.h  UDP_Worker.cpp  UDP_Worker.h
SmartPhone_app/: Network.cpp  Network.h  SmartPhone_app.pro  main.cpp  mainwindow.cpp  mainwindow.h
SmartPhone_app/UDP_Server/: UDP_Server.cpp  UDP_Server.h  UDP_Worker.cpp  UDP_Worker.h
